examples/test/testpolicy10719.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10719
  namespace: namespace2
spec:
  podSelector:
    matchLabels:
      key26: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value9
          key8: value0
          key33: value7
      podSelector:
        matchLabels:
          key25: value7
          key2: value44
